--- a/templates/about.html
+++ b/templates/about.html
@@ -25,20 +25,22 @@
         To design an IoT based system for Real-time detection and communication to rescue 
         landslide victims</h2>
 
-    <p><h2>PROPOSED SOLUTION:</h2>
+    <p><h2><i>PROPOSED SOLUTION:</i></h2></p>
         <h3>      Our project uses seismic sensor(ADXL345 accelerometer) to detect human movement 
         underground. This enables us to check whether the person is alive or not. The Arduino 
         MKR WAN 1310 collects seismic data and transmits it via LoRa to AWS for real-time 
         analysis. Rescue team access the data from AWS cloud and using the location of the 
         device they can rescue victims based on priority(number of person alive).</h3></p>
-    <p><h2>EFFICIENCY AND PRODUCTIVITY:</h2>
+        <img src=
+
+    <p><h2><i>EFFICIENCY AND PRODUCTIVITY:</i></h2>
         <h3>    ▪ Less time-consumption for detection and communication,can explore deep 
         sites(than GPR).</h3>
         <h3>    ▪ Our system is a grid-type system so it could be used for larger impact 
         radius(cover large area).</h3>
         <h3>    ▪ Handy, Portable, Light-weight and Accurate.</h3></p>
         <title><h2>Hardware and Software</h2></title>
-        <table border="1" class="centre">
+        <table border="1" align="centre">
             <tr>
                 <th>Hardware</th>
                 <th>Software</th>
