--- a/templates/info.html
+++ b/templates/info.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <h1>
-        Waiting for data connection......
-    </h1>
+    <button>Start</button>
+    <button>Count</button>
+    <button>Distance</button>
 </html>
