--- a/templates/web.html
+++ b/templates/web.html
@@ -70,26 +70,36 @@
          width: 100%;
          bottom: 0;
          }
+         
     </style>
+<img src="C:\Users\dhars\OneDrive\Pictures\simage.jpg">
 </head>
 <body>
 
 <header>
-     <h1>WELCOME TO OUR ULD DEVICE PAGE!!😎</h1>
+    <img src="">
+    <h1>WELCOME TO OUR ULD DEVICE PAGE!!😎</h1>
 </header>
 
 <nav>
     <a href="/">Home🏡 </a>
-    <a href="/about">About</a>
+    <a href="/features">Features</a>
     <a href="/info">Information📣</a>
 </nav>
+<header>
+    <h2>About</h2>
+</header>
+
+    <h3>Landslides cause significant destruction, often burying people under debris and making 
+        rescue operations extremely challenging. Traditional methods are time-consuming and 
+        ineffective for deep or unstable terrain.
+        To design an IoT based system for Real-time detection and communication to rescue 
+        landslide victims.</h3>
+        
 
 
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Disaster zone</title>
-
+    
         
 
 
