--- a/templates/web.html
+++ b/templates/web.html
@@ -72,7 +72,12 @@
          }
          
     </style>
-<img src="C:\Users\dhars\OneDrive\Pictures\simage.jpg">
+
+
+<video autoplay loop muted playsinline width="300">
+    <source src="video.mp4 "type="video/mp4">
+</video>
+
 </head>
 <body>
 
@@ -90,12 +95,12 @@
     <h2>About</h2>
 </header>
 
-    <h3>Landslides cause significant destruction, often burying people under debris and making 
+    <h3>                  Landslides cause significant destruction, often burying people under debris and making 
         rescue operations extremely challenging. Traditional methods are time-consuming and 
         ineffective for deep or unstable terrain.
         To design an IoT based system for Real-time detection and communication to rescue 
         landslide victims.</h3>
-        
+    
 
 
 
